 - Fixed LinLog negative energy issue (thanks to Katya)
 - Fixed one vertex ISOM algorithm exception (thanks to jorgensigvardsson)
 - Fixed external alg vertex sizes grab logic (thanks to ValentinMarinov)
 - Made StateStorage class extensible by adding virtual modifiers to methods
 - Improved algorithm factory logic to avoid graph type cast exceptions in some class declaration cases

RELEASE 2.3.4
DETAILED CHANGELOG:
 - Further improvements to printing logic. GraphArea::PrintDialog() method now takes print DPI as the first parameter and always fit content int page.

RELEASE 2.3.3
DETAILED CHANGELOG:
 - Exposed internal PrintHelper class with new CalculateEstimatedDPI() method which can calculate DPI required for image export based on specified criterias
 - Fixed arrows display issue when printing 

RELEASE 2.3.2
DETAILED CHANGELOG:
 - Added GraphArea::ExportAsImageDialog() method which act as old ExportAsImage and the ExportAsImage() method now accepts filename to work without the dialog

BREAKING CHANGES:
 - GraphArea::ExportAsImage() now takes filename as the first parameter and don't have save file dialog (use GraphArea::ExportAsImageDialog() instead)

RELEASE 2.3.1
DETAILED CHANGELOG:
 - Added default templates for attached vertex and edge labels
 - Added HighlightBehavior::HighlightedEdgeType attached property that indicates In or Out edge is currently highlighted. Default value is None.
 - Added GraphArea::GetRelatedVertexControls() and GraphArea::GetRelatedEdgeControls() methods to fetch corresponding objects faster and easily
 - Added new printing logic. Now you can use GraphArea::PrintDialog() and GraphArea::PrintVisibleAreaDialog() methods with extended optional parameters
 - Added new image export logic. Now GraphArea::ExportToImage() method allows graph image export in original size via optional parameter