@@ -4,10 +4,10 @@ using System.Windows;
 using System.Windows.Controls;
 using System.Windows.Media;
 using GraphX;
+using GraphX.PCL.Common;
 using GraphX.PCL.Common.Enums;
 using GraphX.PCL.Logic.Algorithms.LayoutAlgorithms;
 using GraphX.PCL.Logic.Algorithms.LayoutAlgorithms.Grouped;
-using GraphX.PCL.Logic.Helpers;
 using QuickGraph;
 using ShowcaseApp.WPF.Models;
 using Rect = GraphX.Measure.Rect;
