@@ -2,10 +2,10 @@
 using System.Collections.Generic;
 using System.Diagnostics;
 using System.Linq;
+using GraphX.PCL.Common;
 using GraphX.PCL.Common.Exceptions;
 using GraphX.PCL.Common.Interfaces;
 using GraphX.PCL.Common.Models;
-using GraphX.PCL.Logic.Helpers;
 using QuickGraph;
 #if WPF
 using System.Windows;
