@@ -1,4 +1,5 @@
-﻿using System.Collections.Generic;
+﻿using System;
+using System.Collections.Generic;
 
 namespace GraphX.PCL.Common
 {
@@ -9,6 +10,12 @@ namespace GraphX.PCL.Common
             if (dictionary.ContainsKey(key))
                 dictionary[key] = value;
             else dictionary.Add(key, value);
+        }
+
+        public static void ForEach<T>(this IEnumerable<T> list, Action<T> func)
+        {
+            foreach (var item in list)
+                func(item);
         }
     }
 }
