@@ -1,6 +1,7 @@
 ﻿using System;
 using System.Collections.Generic;
 using System.Linq;
+using GraphX.PCL.Common;
 using QuickGraph;
 using QuickGraph.Algorithms;
 
