@@ -2,6 +2,7 @@
 using System.Linq;
 using System.Threading;
 using GraphX.Measure;
+using GraphX.PCL.Common;
 using GraphX.PCL.Common.Exceptions;
 using GraphX.PCL.Common.Interfaces;
 using GraphX.PCL.Logic.Algorithms.OverlapRemoval;
